tests/algorithms/x/C/data_structures/stacks/stack_using_two_queues.c
// Generated by Mochi 0.10.32 on 2025-08-07 20:18 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>


size_t _slice_int_len;
static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

static long long* list_append_int(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static long long* _slice_int(const long long *arr, size_t len, int start, int end, size_t *out_len) {
    if (start < 0) start = 0;
    if ((size_t)end > len) end = len;
    if (start > end) start = end;
    size_t n = end - start;
    long long *res = NULL;
    if (n) {
        res = malloc(n * sizeof(long long));
        memcpy(res, arr + start, n * sizeof(long long));
    }
    *out_len = n;
    _slice_int_len = n;
    return res;
}

typedef struct StackWithQueues StackWithQueues;

struct StackWithQueues {
    long long *main_queue;
    size_t main_queue_len;
    long long *temp_queue;
    size_t temp_queue_len;
};

StackWithQueues stack;

StackWithQueues make_stack();
void push(StackWithQueues* s, long long item);
long long pop(StackWithQueues* s);
long long peek(StackWithQueues s);
long long is_empty(StackWithQueues s);
int main(void);

StackWithQueues make_stack() {
    return (StackWithQueues){.main_queue = NULL, .main_queue_len = 0, .temp_queue = NULL, .temp_queue_len = 0};
}

void push(StackWithQueues* s, long long item) {
    s.temp_queue = list_append_int(s.temp_queue, &s.temp_queue_len, item);
    while (len(s.main_queue) > 0LL) {
        s.temp_queue = list_append_int(s.temp_queue, &s.temp_queue_len, s.main_queue[(int)(0LL)]);
        s.main_queue = _slice_int(s.main_queue, s.main_queue_len, 1LL, len(s.main_queue), &(_slice_int_len));
        s.main_queue_len = _slice_int_len;
    }
    long long *new_main = s.temp_queue;
    size_t new_main_len = s.temp_queue_len;
    s.temp_queue = s.main_queue;
    s.main_queue = new_main;
}

long long pop(StackWithQueues* s) {
    if (len(s.main_queue) == 0LL) {
        panic("pop from empty stack");
    }
    long long item = s.main_queue[(int)(0LL)];
    s.main_queue = _slice_int(s.main_queue, s.main_queue_len, 1LL, len(s.main_queue), &(_slice_int_len));
    s.main_queue_len = _slice_int_len;
    return item;
}

long long peek(StackWithQueues s) {
    if (s.main_queue_len == 0LL) {
        panic("peek from empty stack");
    }
    return s.main_queue[(int)(0LL)];
}

long long is_empty(StackWithQueues s) {
    return s.main_queue_len == 0LL;
}

int main(void) {
    {
        long long __start = _now();
        stack = make_stack();
        push(&(StackWithQueues*)stack, 1LL);
        push(&(StackWithQueues*)stack, 2LL);
        push(&(StackWithQueues*)stack, 3LL);
        puts(str_int(peek(stack)));
        puts(str_int(pop(stack)));
        puts(str_int(peek(stack)));
        puts(str_int(pop(stack)));
        puts(str_int(pop(stack)));
        puts(str_int(is_empty(stack)));
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
